@@ -2,6 +2,9 @@ $Id$
 
 2016-03-28  Christian Franke  <franke@computer.org>
 
+	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe
+	sections also for FreeBSD.
+
 	configure.ac: Write configuration summary also to config.log.
 
 2016-03-28  Alex Samorukov  <samm@os2.kiev.ua>
